# bin-unicorn

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  flake.nix  shell.nix
src/: CMakeLists.txt  main.cpp  mbedtls_config.h  util.hpp
src/display/: display.cpp  display.hpp
src/http/: http.cpp  http.hpp  tls_client.c  tls_client.h
src/parsing/: arena.cpp  arena.hpp  parsing.cpp  parsing.hpp
src/worker/: worker.cpp  worker.hpp
